--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@prisma/client": "^6.0.1",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@vercel/analytics": "^1.4.1",
+		"@vercel/speed-insights": "^1.1.0",
 		"axios": "^1.7.9",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
